CHANNELMGR-1316 Fix CKEditor fields validation for ng-required and whitespaces

--- a/channel-manager/frontend-ng/src/angularjs/channel/sidePanels/rightSidePanel/fields/ckeditor/ckeditor.scss
+++ b/channel-manager/frontend-ng/src/angularjs/channel/sidePanels/rightSidePanel/fields/ckeditor/ckeditor.scss
@@ -43,6 +43,10 @@
       border-bottom: 2px solid $blue-500;
       margin-bottom: 0;
     }
+
+    &.cke_invalid {
+      border-bottom-color: $red-a700 !important;
+    }
   }
 }
 
